# apexChatbot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  OBJECTIVE.md  README.md  TUTORIAL.md  UPGRADES.md  docker-compose.yml  entrypoint.sh  plan.md  pyproject.toml  requirements-prod.txt  todo.md
agent/: graph.py  state.py
api/: dependencies.py  main.py  query_log.py  schemas.py
config/: domains.py  settings.py
data_pipeline/: pipeline.py
evaluation/: CHAT_PROMPTS.md  LLM_CALL_ANALYSIS.md  baseline_eval.py  citation_scorer.py  gt_evaluator.py  keyword_scorer.py  llm_judge.py  metrics.py  ragas_eval.py
ex2_evaluation_script/: chat.py  completions_api.py  questions.txt
llm/: claude_client.py  gemini_client.py  ollama_client.py  trace.py
quizzer/: __init__.py  answer_scorer.py  api_client.py  document_sampler.py  prompts.py  question_generator.py  question_types.py  report_generator.py  runner.py
retrieval/: bm25_search.py  hybrid_search.py  query_processor.py  reranker.py  retriever.py
scripts/: run_baseline.py  run_eval.py  run_gt_eval.py  run_pipeline.py  run_quizzer.py  run_quizzer_execute.py  run_telegram.py
telegram_bot/: bot.py
tests/: conftest.py  test_api_schemas.py  test_bm25.py  test_chunk_models.py  test_citation_scorer.py  test_config.py  test_dependencies.py  test_fallback.py  test_generator.py  test_grader.py  test_graph_decisions.py  test_hybrid_search.py  test_keyword_scorer.py  test_metadata_extractor.py  test_metrics.py  test_quality_checker.py  test_query_processor.py  test_rate_limiter.py  test_router.py  (+2 more)
(+55 files in other folders)
